[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/enemy/enemy_aggro_box.gd" type="Script" id=1]
[ext_resource path="res://src/hurtbox.gd" type="Script" id=2]
[ext_resource path="res://src/enemy/enemy_mob.gd" type="Script" id=3]
[ext_resource path="res://src/hitbox.gd" type="Script" id=4]
[ext_resource path="res://scenes/instanced/state_machines/enemy_state_machine_mob.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/pixel_snap.gd" type="Script" id=6]
[ext_resource path="res://src/sprites/sprite_enemy_mob.gd" type="Script" id=7]
[ext_resource path="res://src/physics_interpolator_2d.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 32.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 30.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 16.0
height = 32.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 26.0

[node name="EnemyMob" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )
facing = 1

[node name="EnemyStateMachineMob" parent="." instance=ExtResource( 5 )]
target_instance_path = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PhysicsInterpolator2D" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 8 )
active = true
debug_draw = false

[node name="PixelSnap" type="Node2D" parent="PhysicsInterpolator2D"]
script = ExtResource( 6 )
mode = 0
process_mode = 0

[node name="MobSprite" type="Node2D" parent="PhysicsInterpolator2D/PixelSnap"]
script = ExtResource( 7 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 4 )
active = true
contact_damage = 24
contact_force = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="AggroBox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroBox"]
shape = SubResource( 4 )

[node name="RefireTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="dying" from="." to="EnemyStateMachineMob" method="fire_custom_event" binds= [ "SetDying" ]]
[connection signal="take_damage" from="Hurtbox" to="." method="take_damage"]
[connection signal="give_damage" from="Hitbox" to="." method="give_damage"]
[connection signal="screen_entered" from="AggroBox" to="EnemyStateMachineMob" method="fire_custom_event" binds= [ "ScreenEntered" ]]
[connection signal="screen_exited" from="AggroBox" to="EnemyStateMachineMob" method="fire_custom_event" binds= [ "ScreenExited" ]]
[connection signal="timeout" from="RefireTimer" to="EnemyStateMachineMob" method="fire_custom_event" binds= [ "Fire" ]]
[connection signal="timeout" from="DyingTimer" to="EnemyStateMachineMob" method="fire_custom_event" binds= [ "DyingFinished" ]]
